--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -22,18 +22,18 @@ jobs:
         pip install -e .[dev]
     - name: Formatting and linters
       run: |
-        black --check mullet tests setup.py --exclude mullet/_version.py
-        isort --check-only --quiet --recursive mullet tests setup.py
-        pydocstyle mullet
+        black --check src tests setup.py --exclude mullet/_version.py
+        isort --check-only --quiet --recursive src tests setup.py
+        pydocstyle src
         bandit -c .bandit.yml -r mullet
-        flake8 mullet tests setup.py
-        pylint mullet
+        flake8 src tests setup.py
+        pylint src
     - name: Build docs
       # treat warnings as errors (-W)...
       # ...but not when being nitpicky (-n)
       run: |
-          sphinx-build -M html docs docs/build -qW
-          sphinx-build -M html docs docs/build -Eqn -b coverage
+          sphinx-build -M html docs/source docs/build -qW
+          sphinx-build -M html docs/source docs/build -Eqn -b coverage
           if [[ -s docs/build/html/python.txt ]]
           then
               echo
