--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -1,4 +1,4 @@
-name: Mullet-CI
+name: Mullet-CI-CD
 on: push
 
 jobs:
@@ -80,8 +80,9 @@ jobs:
       run: |
           pytest notebooks -r a --nbval --sanitize-with tests/notebook-tests.cfg --no-cov
 
-  deploy:
+  deploy-test-pypi:
     needs: build
+    if: github.ref == 'refs/heads/master'
 
     runs-on: ubuntu-latest
     strategy:
@@ -89,8 +90,49 @@ jobs:
         python-version: [3.7]
 
     steps:
-    - name: Placeholder
-      env:
-        TWINE_PASSWORD: "take from secrets e.g. https://github.com/actions/starter-workflows/blob/master/ci/python-publish.yml"
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - name: Setup python
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
       run: |
-        echo "Deploy commands go here, this could also be a separate file triggered by a suitable event see https://github.community/t5/GitHub-Actions/Depend-on-another-workflow/td-p/32317 or https://help.github.com/en/actions/reference/events-that-trigger-workflows"
+        pip install --upgrade pip
+        pip install -e .[dev]
+    - name: Create package
+      run: python setup.py sdist bdist_wheel --universal
+    - name: Publish package to TestPyPI
+      uses: pypa/gh-action-pypi-publish@master
+      with:
+        user: __token__
+        password: ${{ secrets.test_pypi_password }}
+        repository_url: https://test.pypi.org/legacy/
+
+  deploy-pypi:
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/v')
+
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.7]
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - name: Setup python
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        pip install --upgrade pip
+        pip install -e .[dev]
+    - name: Create package
+      run: python setup.py sdist bdist_wheel --universal
+    - name: Publish package to PyPI
+      uses: pypa/gh-action-pypi-publish@master
+      with:
+        user: __token__
+        password: ${{ secrets.pypi_password }}
