--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -82,7 +82,7 @@ jobs:
 
   deploy-test-pypi:
     needs: build
-    if: github.ref == 'refs/heads/master'
+    if: startsWith(github.ref, 'refs/tags/v')
 
     runs-on: ubuntu-latest
     strategy:
@@ -109,30 +109,31 @@ jobs:
         password: ${{ secrets.test_pypi_password }}
         repository_url: https://test.pypi.org/legacy/
 
-  deploy-pypi:
-    needs: build
-    if: startsWith(github.ref, 'refs/tags/v')
+# Can turn this on once we're happy with test PyPI workflow
+  # deploy-pypi:
+  #   needs: build
+  #   if: startsWith(github.ref, 'refs/tags/v')
 
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.7]
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       python-version: [3.7]
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    - name: Setup python
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        pip install --upgrade pip
-        pip install -e .[dev]
-    - name: Create package
-      run: python setup.py sdist bdist_wheel --universal
-    - name: Publish package to PyPI
-      uses: pypa/gh-action-pypi-publish@master
-      with:
-        user: __token__
-        password: ${{ secrets.pypi_password }}
+  #   steps:
+  #   - name: Checkout repository
+  #     uses: actions/checkout@v2
+  #   - name: Setup python
+  #     uses: actions/setup-python@v1
+  #     with:
+  #       python-version: ${{ matrix.python-version }}
+  #   - name: Install dependencies
+  #     run: |
+  #       pip install --upgrade pip
+  #       pip install -e .[dev]
+  #   - name: Create package
+  #     run: python setup.py sdist bdist_wheel --universal
+  #   - name: Publish package to PyPI
+  #     uses: pypa/gh-action-pypi-publish@master
+  #     with:
+  #       user: __token__
+  #       password: ${{ secrets.pypi_password }}
