--- a/.github/workflows/test-pypi-install.yml
+++ b/.github/workflows/test-pypi-install.yml
@@ -1,7 +1,8 @@
+name: Test PyPI install
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '*/5 * * * *'
+    - cron:  '* * * * 3'
 
 jobs:
   test-installation:
