--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+*.o
+*.c
+*.o.d
+
+# header files
+*.h
+
+# Fortran module files
+*.mod
+*.smod
+*.fpp
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# f90wrap files
+f90wrap*
+.f2py_f2cmap
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
