--- a/sandbox/Makefile
+++ b/sandbox/Makefile
@@ -1,18 +1,15 @@
 .DEFAULT_GOAL := help
 
-CC       = gcc
-F90      = gfortran
-PYTHON   = python
+CC = gcc
+F90 = gfortran
+PYTHON = python
 
-FPP      = gfortran -E
+FPP = gfortran -E
 FPP_F90FLAGS = -x f95-cpp-input -fPIC
 F90FLAGS = -fPIC
-FCOMP    = gfortran
-LIBS     =
+FCOMP = gfortran
 
 CFLAGS = -fPIC
-
-UNAME = $(shell uname)
 
 ifeq (${UNAME}, Darwin)
   LIBTOOL = libtool -static -o
@@ -20,7 +17,7 @@ else
   LIBTOOL = ar src
 endif
 
-PYTHON_MODULE_NAME = example_derived_types
+PYTHON_MODULE_NAME = test_scm
 # mapping between Fortran and C types
 KIND_MAP = kind_map
 
@@ -50,53 +47,76 @@ LIBSRC_WRAP_OBJECTS = $(addsuffix .o,${LIBSRC_WRAP_SOURCES})
 # fpp files
 LIBSRC_WRAP_FPP_FILES = $(addsuffix .fpp,${LIBSRC_WRAP_SOURCES})
 
-#=======================================================================
-#                 Relevant suffixes
-#=======================================================================
+define PRINT_HELP_PYSCRIPT
+import re, sys
 
-.SUFFIXES: .f90 .fpp
+for line in sys.stdin:
+	match = re.match(r'^([a-zA-Z_-]+):.*?## (.*)$$', line)
+	if match:
+		target, help = match.groups()
+		print("%-20s %s" % (target, help))
+endef
+export PRINT_HELP_PYSCRIPT
 
-#=======================================================================
-#
-#=======================================================================
+.PHONY: help
+help:
+	@python -c "$$PRINT_HELP_PYSCRIPT" < $(MAKEFILE_LIST)
 
-.PHONY: all clean
-
-
+.PHONY: all
 all: _${PYTHON_MODULE_NAME}.so _${PYTHON_MODULE_NAME}_pkg.so
 
-
+.PHONY: clean
 clean:
-	-rm ${LIBSRC_OBJECTS} ${LIBSRC_FPP_FILES} libsrc.a _${PYTHON_MODULE_NAME}.so \
-	_${PYTHON_MODULE_NAME}_pkg.so *.mod *.fpp f90wrap*.f90 f90wrap*.o *.o
+	-rm \
+		${LIBSRC_OBJECTS} \
+		${LIBSRC_FPP_FILES} \
+		libsrc.a \
+		_${PYTHON_MODULE_NAME}.so \
+		_${PYTHON_MODULE_NAME}_pkg.so \
+		*.mod \
+		*.fpp \
+		f90wrap*.f90 \
+		f90wrap*.o \
+		*.o
 
-
-.f90.o:
+%.o: %.f90
 	${F90} ${F90FLAGS} -c $< -o $@
 
-
-.c.o:
+%.o: %.c
 	${CC} ${CFLAGS} -c $< -o $@
 
-
-.f90.fpp:
+%.fpp: %.f90
 	${FPP} ${FPP_F90FLAGS} $<  -o $@
-
 
 libsrc.a: ${LIBSRC_OBJECTS}
 	${LIBTOOL} $@ $?
 
-
 _${PYTHON_MODULE_NAME}.so: libsrc.a ${LIBSRC_FPP_FILES}
-	f90wrap -m ${PYTHON_MODULE_NAME} ${LIBSRC_WRAP_FPP_FILES} -k ${KIND_MAP} -v
-	f2py-f90wrap --fcompiler=$(FCOMP) --build-dir . -c -m _${PYTHON_MODULE_NAME} -L. -lsrc f90wrap*.f90
+	f90wrap \
+		-m ${PYTHON_MODULE_NAME} \
+		${LIBSRC_WRAP_FPP_FILES} \
+		-k ${KIND_MAP} \
+		-v
+	f2py-f90wrap \
+		--fcompiler=$(FCOMP) \
+		--build-dir . \
+		-c \
+		-m _${PYTHON_MODULE_NAME} \
+		-L. -lsrc \
+		f90wrap*.f90
 
 
 _${PYTHON_MODULE_NAME}_pkg.so: libsrc.a ${LIBSRC_FPP_FILES}
-	f90wrap -m ${PYTHON_MODULE_NAME}_pkg ${LIBSRC_WRAP_FPP_FILES} -k ${KIND_MAP} -v -P
-	f2py-f90wrap --fcompiler=$(FCOMP) --build-dir . -c -m _${PYTHON_MODULE_NAME}_pkg -L. -lsrc f90wrap*.f90
-
-
-test: all
-	${PYTHON} tests.py
-	${PYTHON} tests_pkg.py
+	f90wrap \
+		-m ${PYTHON_MODULE_NAME}_pkg \
+		${LIBSRC_WRAP_FPP_FILES} \
+		-k ${KIND_MAP} \
+		-v \
+		-P
+	f2py-f90wrap \
+		--fcompiler=$(FCOMP) \
+		--build-dir . \
+		-c \
+		-m _${PYTHON_MODULE_NAME}_pkg \
+		-L. -lsrc \
+		f90wrap*.f90
